--- a/manifest.json
+++ b/manifest.json
@@ -5,16 +5,16 @@
   "background_color": "#004740",
   "display": "fullscreen",
   "orientation": "portrait",
-  "scope": "/",
-  "start_url": "/",
+  "scope": "/Random-Choice-PWA/",
+  "start_url": "/Random-Choice-PWA/",
   "icons": [
     {
-      "src": "icons/favicon.png",
+      "src": "icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icons/favicon.png",
+      "src": "icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
