--- a/package.json
+++ b/package.json
@@ -5,26 +5,24 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "clean": "rm -rf ./node_modules ./out ./next",
     "lint": "next lint",
+    "tsw": "tsc --watch",
     "export": "next build && next export",
     "gh-add-nojekyll": "touch ./out/.nojekyll",
     "gh-predeploy": "npm run export && npm run gh-add-nojekyll",
     "gh-deploy": "npm run gh-predeploy && gh-pages -d out --dotfiles"
   },
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.3.1",
-    "@mui/material": "^5.4.0",
-    "next": "^12.0.10",
+    "next": "^14.1.0",
     "next-pwa": "^5.4.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "sass": "^1.45.1"
   },
   "devDependencies": {
     "@types/node": "17.0.0",
-    "@types/react": "17.0.37",
+    "@types/react": "18.2.55",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "gh-pages": "^3.2.3",
