--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "tsw": "tsc --watch",
     "export": "next build && next export",
-    "gh-deploy": "npm run export && touch ./out/.nojekyll && gh-pages -d out --dotfiles"
+    "gh-deploy": "npm run export && touch ./out/.nojekyll && gh-pages -d out --dotfiles",
+    "ghd": "npm run gh-deploy"
   },
   "dependencies": {
     "next": "^14.1.0",
